call-center/src/objects/Service2__c.object
<CustomObject>
    <description>Meta data about Charge Transactions</description>
    <fields>
        <fullName>Aggregate_Id__c</fullName>
        <description>The composite key for the service data. The key is the concatenation of External Guarantor Sirono Id, Service Date, Charge Code, CPT Code, CPT Code Modifiers, CPT Code Override, Provider, Revenue Code and Quantity with &apos;:&apos; as separator</description>
        <externalId>true</externalId>
        <label>Aggregate ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPT_Code_Modifiers__c</fullName>
        <label>CPT Code Modifiers</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPT_Code_Override__c</fullName>
        <description>CPT Code</description>
        <label>CPT Code Override</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPT_Code__c</fullName>
        <label>CPT Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Code_Description__c</fullName>
        <description>Charge Code Description</description>
        <label>Charge Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <description>Charge Code</description>
        <label>Charge Code</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>IF(ISBLANK(Service_Rollup__c), &quot;Service&quot;, Service_Rollup__r.Description__c) &amp;
&quot; - &quot; &amp;
TEXT(MONTH(Service_Date__c)) + &quot;/&quot; &amp;
TEXT(DAY(Service_Date__c)) + &quot;/&quot; &amp;
TEXT(YEAR(Service_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related External Guarantor</description>
        <label>External Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services (External Guarantors)</relationshipLabel>
        <relationshipName>Services2_EG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <description>Related Guarantor</description>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services (Guarantors)</relationshipLabel>
        <relationshipName>Services2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <label>Quantity</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <description>Service Date</description>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Rollup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Code</label>
        <referenceTo>Service_Rollup__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SVC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>